# dailymotion-coding-test

./: .gitignore  .importlinter  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  renovate.json5  ruff.toml
.github/actions/ci-setup/: action.yml
.github/workflows/: ci.yml
src/application/registration/ports/: __init__.py  activation_code_repository.py  email_service.py  password_hasher.py  user_repository.py
src/application/registration/use_cases/: __init__.py  activate_user.py  issue_activation_code.py  register_user.py
src/domain/common/: public_id.py
src/domain/user/: __init__.py  errors.py  password.py  public_id.py  status.py  user.py
src/domain/user/entities/: activation_code.py  user.py
src/domain/user/value_objects/: password_hash.py
src/helpers/: __init__.py  enum.py
src/http/: app.py
src/http/dependencies/: auth.py  database_asyncpg.py  registration.py
src/http/error_management/: __init__.py  error_code.py  error_response.py  error_utils.py
src/http/error_management/error_handlers/: __init__.py  base.py  http.py  postgres.py  user.py  validation.py
src/http/middlewares/: __init__.py  logging_middleware.py
src/http/routes/: __init__.py
src/http/routes/v1/: __init__.py
src/http/routes/v1/healthcheck/: endpoints.py  schemas.py
src/http/routes/v1/registration/: endpoints.py  schemas.py
src/identity/: __init__.py
src/infrastructure/database/postgres/: asyncpg_pool.py  clear_data.py  migrate.py
src/infrastructure/database/postgres/migrations/: 001_create_users_table.sql  002_create_activation_codes_table.sql
src/infrastructure/database/postgres/repositories/: activation_code_repository.py  user_repository.py
src/infrastructure/logging/: __init__.py  api_call_context.py  logger.py
src/infrastructure/security/: password_hasher.py
src/infrastructure/smtp/: email_service.py
tests/: conftest.py
tests/application/registration/use_cases/: test_activate_user.py  test_issue_activation_code.py  test_register_user.py
tests/domain/common/: test_public_id.py
tests/domain/user/: test_activation_code.py  test_password.py
tests/http/: conftest.py
tests/http/dependencies/: test_auth.py
tests/http/routes/v1/: test_healthcheck.py
tests/http/routes/v1/registration/: test_endpoints.py
tests/infrastructure/: conftest.py
tests/infrastructure/database/postgres/repositories/: test_activation_code_repository.py  test_user_repository.py
tests/infrastructure/security/: test_password_hasher.py
