[project]
name = "identity"
version = "0.1.0"
description = "Dailymotion coding test"
readme = "README.md"
authors = [
    { name = "Antoine Henning", email = "antoinehng@proton.me" }
]
requires-python = "==3.14.2"
dependencies = []

[dependency-groups]
dev = [
    "coverage==7.13.0",
    "import-linter==2.9",
    "pip-audit==2.10.0",
    "pyright==1.1.407",
    "pytest-asyncio==1.3.0",
    "pytest-mock==3.15.1",
    "pytest==9.0.2",
    "ruff==0.14.9",
]

[tool.uv]
default-groups = [
    "dev",
]

[project.scripts]
identity = "identity:main"

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build" # Using uv_build: fast, zero-config, modern — Could move to hatchling if needed for broader compatibilty with legacy 

