[project]
name = "identity"
version = "0.1.0"
description = "Dailymotion coding test"
readme = "README.md"
authors = [
    { name = "Antoine Henning", email = "antoinehng@proton.me" }
]
requires-python = "==3.14.2"
dependencies = [
   "fastapi[standard-no-fastapi-cloud-cli]==0.124.4",
   "granian[uvloop]==2.6.0",                          # ASGI server with uvloop for better performance
]

[dependency-groups]
database = [
    "asyncpg==0.31.0",
]
dev = [
    "coverage==7.13.0",
    "import-linter==2.9",
    "pip-audit==2.10.0",
    "pyright==1.1.407",
    "pytest-asyncio==1.3.0",
    "pytest-mock==3.15.1",
    "pytest==9.0.2",
    "ruff==0.14.9",
]
logging = [
    "rich==14.2.0",
]
performance = [
    # All dependencies installed purely for performance improvements
    "httptools==0.7.1", # Automatically used by FastAPI - Faster HTTP parsing (C binding)
    "orjson==3.11.5",   # Set to be used as default FastAPI JSON serialization/deserialization
]
security = [
    "bcrypt==5.0.0",
]
typing = [
    "email-validator==2.3.0",
    "pydantic==2.12.5",
    "asyncpg-stubs==0.31.0",  # Type stubs for asyncpg
]

[tool.uv]
package = false
default-groups = [
    "dev",
    "logging",
    "performance",
    "security",
    "typing",
]

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build" # Using uv_build: fast, zero-config, modern — Could move to hatchling if needed for broader compatibilty with legacy 

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.14"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
# Automatically mark async test functions as asyncio tests
asyncio_mode = "auto"
